# doozy

./: .gitignore  README.md
backend/: index.js  index.ts  package-lock.json  package.json  run_engine.js  run_engine.ts  server.js  tsconfig.json
backend/controllers/: story.controller.ts  tag.controller.ts  task.controller.ts
backend/db/: connection.js  connection.ts  migrate.js  seed.js  taskRepository.ts
backend/db/data/: data.sqlite  data.sqlite-shm  data.sqlite-wal
backend/db/migrations/: 001_init.sql
backend/db/seeds/: 001_populate.sql
backend/repositories/: story.repo.ts  tag.repo.ts  task.repo.ts
backend/routes/: index.ts  stories.ts  tags.ts  task.ts
backend/services/: story.service.ts  tag.service.ts  task.service.ts
frontend/: index.html
frontend/src/: App.tsx
frontend/src/List/: index.tsx
task-engine/: CMakeLists.txt  README.md
task-engine/src/: engine.cpp  engine.h  main.cpp
task-engine/tests/: engine_tests.cpp  manual_tests.sh
